--- a/burning-airlines-client/src/index.css
+++ b/burning-airlines-client/src/index.css
@@ -7,6 +7,20 @@ html {
   box-sizing: inherit;
 }
 
+h2 {
+  font-family: -apple-system;
+}
+
+.create-link {
+  font-family: -apple-system;;
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+}
+  
+.create-link:hover {
+  color: #CCCCCC;
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -383,16 +397,39 @@ i {
   width: 100%;
 }
 
-
-.create-link {
-  font-family: "Ubuntu";
-  font-size: 20px;
-  color: black;
-  text-decoration: none;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Set the gap between each form */
 }
-  
-.create-link:hover {
-  color: #CCCCCC;
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem; /* Set the gap between each form field */
+}
+
+.form-container label {
+  display: block;
+  margin-bottom: 0.25rem; /* Set the margin between the label and input */
+}
+
+.form-container input[type="text"],
+.form-container input[type="number"] {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.form-container input[type="submit"] {
+  padding: 0.5rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  background-color: darkgray;
+  color: #fff;
+  cursor: pointer;
 }
 
 
